tests/ui/feature-gates/feature-gate-gen_blocks.none.stderr
error[E0422]: cannot find struct, variant or union type `gen` in this scope
  --> $DIR/feature-gate-gen_blocks.rs:5:5
   |
LL |     gen {};
   |     ^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0422`.
